--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
     <body>
         <img src="resources/ball.png" id="cball">
-        <form>
+        <!--<form>-->
             <label for="question">What is your question stranger?</label><br>
             <input type="text" id="question" name="question" autofocus><br>
-        </form>
-        <button id="check">Ask</button>
+        <!--</form>-->
+        <button id="check">Ask me</button>
         <p id="answerfield"></p>
     </body>
 </html>
