--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link type="text/css" rel="stylesheet" href="style.css">
         <script src="main.js" defer></script>
         <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
     <body>
         <img src="resources/ball.png" id="cball">
